# agritech

./: Makefile  README.md  main.py  pyproject.toml
notebooks/: main.py
