[project]
name = "agritech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "rioxarray>=0.18.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xarray>=2025.1.2",
]
